cmake_minimum_required(VERSION 3.24)
project(advent_of_code)

set(CMAKE_CXX_STANDARD 17)

add_executable(day01-first day01/first.cpp)
add_executable(day01-second day01/second.cpp)
add_executable(day02-first day02/first.cpp)
add_executable(day02-first-alt day02/firstalt.cpp)
add_executable(day02-second day02/second.cpp)