cmake_minimum_required(VERSION 3.24)
project(advent_of_code)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_CXX_FLAGS "-O3")

add_executable(day01-first day01/first.cpp)
add_executable(day01-second day01/second.cpp)
add_executable(day02-first day02/first.cpp)
add_executable(day02-first-alt day02/firstalt.cpp)
add_executable(day02-second day02/second.cpp)
add_executable(day03-first day03/first.cpp)
add_executable(day03-second day03/second.cpp)
add_executable(day04-first day04/first.cpp)
add_executable(day04-second day04/second.cpp)
add_executable(day05-first day05/first.cpp)
add_executable(day05-second day05/second.cpp)
add_executable(day06-first day06/first_second.cpp)
add_executable(day07-first day07/first_second.cpp)
add_executable(day08-first day08/first_second.cpp)