cmake_minimum_required(VERSION 3.24)
project(advent_of_code)

set(CMAKE_CXX_STANDARD 17)

#set(CMAKE_CXX_FLAGS "-O3")

add_executable(day01-first day01/first.cpp)
add_executable(day01-second day01/second.cpp)
add_executable(day02-first day02/first.cpp)
add_executable(day02-first-alt day02/firstalt.cpp)
add_executable(day02-second day02/second.cpp)
add_executable(day03-first day03/first.cpp)
add_executable(day03-second day03/second.cpp)
add_executable(day04-first day04/first.cpp)
add_executable(day04-second day04/second.cpp)
add_executable(day05-first day05/first.cpp)
add_executable(day05-second day05/second.cpp)
add_executable(day06 day06/first_second.cpp)
add_executable(day07 day07/first_second.cpp)
add_executable(day08 day08/first_second.cpp)
add_executable(day09-first day09/first.cpp)
add_executable(day09-second day09/second.cpp)
add_executable(day10 day10/first_second.cpp)
add_executable(day11 day11/first_second.cpp)
add_executable(day12 day12/first_second.cpp)
add_executable(day13 day13/first_second.cpp)
add_executable(day14-first day14/first.cpp)
add_executable(day14-second day14/second.cpp)
add_executable(day15-first day15/first.cpp)
add_executable(day15-second day15/second.cpp)